--- a/docs/style.css
+++ b/docs/style.css
@@ -67,7 +67,7 @@ p + p {
  * Layout styles
  */
 
-/* Full size background image */
+/* Full-size background image */
 html, #container, .inner { background-color:transparent;}
 html {
   background:url(background.jpg) center center no-repeat fixed;
