--- a/docs/style.css
+++ b/docs/style.css
@@ -20,7 +20,7 @@ body {
 a {
   font-weight: normal;
   text-decoration: none; 
-  color:#EF6D3D;
+  color:#3DE0EF;
 }
 a: focus {
   outline: thin dotted;
